zip/static/style.css
@font-face {
  font-family: 'FunnelSans', sans-serif;
  font-style: normal;
  font-weight: 0 400;
  src: url("/static/FunnelSans-Regular.ttf") format('ttf');
}

@font-face {
  font-family: 'FunnelSans', sans-serif;
  font-style: italic;
  font-weight: 1 400;
  src: url("/static/FunnelSans-Italic.ttf") format('ttf');
}

body{
  background-color: #111;
  background-image: url("/static/dark_exa.png");
  image-rendering: pixelated;

  background-size: 66px;
  background-repeat: repeat;
  color: rgb(255, 255, 255);
  font-family: 'FunnelSans', sans-serif;
  font-size: 22px;
  max-width:1200px;
  margin:0 auto;
}

.badge {
	/* width: 88px;
	height: 31px; */
	image-rendering: pixelated;
	transition: .2s scale cubic-bezier(.075,.82,.165,1);
	cursor: pointer;
  &:hover {
    scale:1.3;
    rotate:5deg
  }
}

div.footer{
  color: #c3b0b0;
}

div.navbar {
  background-color: #165a135e;
  border-top: 2px solid #2cff00db;
  border-left: 2px solid #2cff00db;
  border-right: 2px solid #2cff00db;
  margin-top: 10px;
  /* margin-bottom: 10px; */
  /* margin-left: 10px;
  margin-right: 10px; */
  padding: 10px;
}

div.section{
  background-color: #321436b0;
  border-bottom: 2px solid #00e7ffd6;
  border-left: 2px solid #00e7ffd6;
  border-right: 2px solid #00e7ffd6;
  /* margin-top: 10px;
  margin-bottom: 10px; */
  /* margin-left: 10px;
  margin-right: 10px; */
  padding: 10px;
  display: grid;
  justify-content: left;
}

div.inner-section{
  background-color: #321436b0;
  border: 2px solid #00e7ffd6;
  /* margin-top: 10px;
  margin-bottom: 10px; */
  /* margin-left: 10px;
  margin-right: 10px; */
  padding: 10px;
  display: grid;
  justify-content: left;
  width: fit-content;
  height: fit-content;
}

ul{
  margin: 0px;
}

pre {
  background-color: #424242;
  /* white-space: pre-wrap;
  word-break: break-word;
  max-width: 100%;
  overflow-wrap: anywhere; */
}

.inline{
  display:inline;
}

/* For most modern browsers (Chrome, Edge, Safari, Firefox, Opera) */
::selection {
  background-color: rgb(255, 252, 72);
  color: rgb(0, 0, 0);
}

/* For compatibility with older Firefox versions */
::-moz-selection {
  background-color: rgb(255, 252, 72);
  color: rgb(0, 0, 0);
}

hr{
    margin-left:0;
    left: 0px;
    /* width: 500px; */
}

a:link {
  text-decoration: underline dotted;
  color: rgb(255, 255, 255);
}
a:visited {
  /* text-decoration: dashed; */
  color: rgb(255, 255, 255);
  border-color: hotpink;
}
a:hover{
  text-decoration: underline;
  background-color: white;
  color: black;
}

a:active{
  text-decoration: underline;
  background-color: white;
  color: black;
}

